Fix test result whitespace, 15s test timeout

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -7,7 +7,7 @@ body {
 
 pre {
     color: inherit;
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 body.vscode-light {
